# CudaTest

./: CMakeLists.txt  main.cu
